Fix GUI circle button alignment in Safari

--- a/src/styles.css
+++ b/src/styles.css
@@ -77,7 +77,7 @@ body {
     }
     .gui-button-text {
         font-size: 24px;
-        width: 1.2em;
+        width: 1.3em;
     }
 }
 
@@ -174,14 +174,23 @@ body {
         padding: 12px 20px;
         width: 100%;
     }
+    .gui-button.circle-button {
+        display: unset;
+        width: 1.3em;
+        margin: 6px;
+        padding: 0em 0em 0.1em 0em;
+        vertical-align: sub;
+    }
 }
+
 div.row .gui-input-text-wrapper {
     label {
         margin-right: 10px;
     }
     input[type="text"],
     select {
-        width: auto;
+        /* width: auto; */
+        width: 60%;
     }
 }
 
